--- a/timeline-style.css
+++ b/timeline-style.css
@@ -18,6 +18,7 @@ html {
 
 body {
 	margin: 0;
+	cursor: url(img/cursors/Cursor.png),auto;
 }
 /*Barra de Título*/
 nav {
@@ -46,6 +47,7 @@ nav a {
 	padding: 7px 12px 2px 12px;
 	color: #fff;
 	text-decoration: none;
+	cursor:url(img/cursors/Pointer.png),auto;
 }
 
 nav a:hover {
@@ -75,6 +77,7 @@ nav a:hover {
 	font-size: 2vw;
 	padding: 8px 12px 2px 12px;
 	margin: -20px 0px 0px 0px;
+	cursor:url(img/cursors/Pointer.png),auto;
 }
 
 .mapButton:hover {
@@ -148,7 +151,7 @@ main {
 	padding: 3px 10px;
 	background-color: white;
 	z-index: 2;
-	cursor:pointer;
+	cursor:url(img/cursors/PointerTip.png),auto;
 }
 
 .deny {cursor:not-allowed;}
@@ -187,7 +190,7 @@ main {
 .eBA1 {grid-row: 0010 / 0010;}
 .eBA2 {grid-row: 1210 / 1210;}
 .eBA3 {grid-row: 1810 / 1810;}
-
+.e3200bc {grid-row: 0101 / 0101;}
 .e3150bc {grid-row: 0151 / 0151;}
 :has(.e3150bc:hover) .oEgyptB1:not(:hover) {box-shadow:inset 0px 0px 0px 2px #ffcd39; outline: 2px solid #ffe69c; filter: brightness(90%) saturate(150%); z-index:2}
 .e2600bc {grid-row: 0701 / 0701;}
@@ -196,6 +199,7 @@ main {
 :has(.e2025bc:hover) .oMesoB3:not(:hover) {box-shadow:inset 0px 0px 0px 2px #fd9843; outline: 2px solid #fecba1; filter: brightness(100%); z-index:2}
 .e2025bc {grid-row: 1276 / 1276;}
 :has(.e2025bc:hover) .oMesoB3:not(:hover) {box-shadow:inset 0px 0px 0px 2px #fd9843; outline: 2px solid #fecba1; filter: brightness(100%); z-index:2}
+.e1850bc {grid-row: 1451 / 1451;}
 .e1792bc {grid-row: 1509 / 1509;}
 :has(.e1792bc:hover) .oMesoB4:not(:hover) {box-shadow:inset 0px 0px 0px 2px #fd9843; outline: 2px solid #fecba1; filter: brightness(90%) saturate(150%); z-index:2}
 .e1650bc {grid-row: 1651 / 1651;}
@@ -211,12 +215,15 @@ main {
 /* IRON */
 .eIA0 {grid-row: 010 / 010;}
 .e1100 {grid-row: 0101 / 0101;}
+.e1050bc {grid-row: 0151 / 0151;}
 :has(.e1100:hover) .oMesoI1:not(:hover) {box-shadow:inset 0px 0px 0px 2px #fd9843; outline: 2px solid #fecba1; filter: brightness(90%) saturate(150%); z-index:2}
 .eCIx {grid-row: 401 / 401;}
 
 /* ANCIENT */
 .eCA1 {grid-row: 501 / 501;}
 :has(.eCA1:hover) .oGreeceA3:not(:hover) {box-shadow:inset 0px 0px 0px 2px #8c68cd; outline: 2px solid #c5b3e6; filter: brightness(90%) saturate(150%); z-index:2}
+.eSR {grid-row: 941 / 941;}
+.e800bc {grid-row: 0011 / 0010;}
 
 .e605bc {grid-row: 0196 / 0196;}
 :has(.e605bc:hover) .oMesoA1:not(:hover) {box-shadow:inset 0px 0px 0px 2px #fd9843; outline: 2px solid #fecba1; filter: brightness(90%) saturate(150%); z-index:2}
@@ -351,7 +358,7 @@ main {
 .close:hover,
 .close:focus {
   color: #ff0000;
-  cursor: pointer;
+  cursor:url(img/cursors/Pointer.png),auto;
 }
 
 #info {
@@ -363,7 +370,7 @@ main {
 
 #info img {
 	width: 300px;
-	cursor: pointer;
+	cursor:url(img/cursors/Pointer.png),auto;
 }
 
 .legend {
@@ -389,7 +396,7 @@ main {
 	border: 1px solid black;
 	padding: 4px 8px;
 	font-size: 18px;
-	cursor: pointer;
+	cursor:url(img/cursors/Pointer.png),auto;
 }
 
 
@@ -446,7 +453,7 @@ iframe{border:none;}
 .mapaModal > p {height: 800px;}
 
 .flexMap{display:flex; background-color: #3c3c3a; color: #fff;height: 100%;}
-																		   
+
 .map {width: 1340px; height: 100vh;}
 .infobox {
 	width: 300px;
@@ -470,10 +477,11 @@ iframe{border:none;}
 	width: 220px;
 	text-align: center;
 	margin: auto;
-	margin-top: 30px;
 	padding-bottom: 8px;
 	border: 2px solid white;
 	font-size: 14px;
+	position: sticky;
+	top: 30px;
 }
 
 .sidetipMap2 {
@@ -501,6 +509,10 @@ iframe{border:none;}
   left: 20px;
 }
 
+.island,.sea0,.sea,.river,.desert,.mountain,.plateau,.steppe,.taiga,.region{cursor:url(img/cursors/CursorPin.png),auto;}
+
+
+
 .land{fill:#fff6d5;stroke:#5f8dd3;}
 .island{fill:#fff6d5;stroke:#5f8dd3;}
 .sea0{fill:#afc6e9;stroke:#5f8dd3;}
@@ -522,7 +534,7 @@ iframe{border:none;}
 .plateau:hover{fill:#c1b4a3;stroke:#918473;opacity:0.75;}
 .steppe:hover{fill:#5aa02c;stroke:#447821;opacity:0.75;}
 .taiga:hover{fill:#5fd38d;stroke:#37c871;opacity:0.75;}
-.region:hover{fill:#e9ddaf;stroke:#decd87;fill-opacity:0.5;}
+.region:hover{fill:#ffeeaa;stroke:#504416;fill-opacity:1;}
 
 .island2{fill:#fff6d5;stroke:#5f8dd3;}
 .sea2{fill:#afc6e9;stroke:#5f8dd3;}
@@ -568,8 +580,6 @@ iframe{border:none;}
 .civRome2 {fill:#e35d6a;stroke:#2c0b0e;}
 .civRome2:hover {fill:#dc3545;}
 .proRome {fill:#dc3545;stroke:#d1e7dd;stroke-opacity:0.5;}
-/*.proRome text {fill:#fff;stroke:#000;opacity:0;stroke-opacity:0;}
-.proRome:hover text {opacity:1;stroke-opacity:1;}*/
 
 .city {
 	font-weight:500;
@@ -599,6 +609,25 @@ iframe{border:none;}
 .map6 {fill:#238b45;stroke:#17280b;}
 .map7 {fill:#005824;stroke:#17280b;}
 
+.chart {width: 1340px;}
+.boxH {fill:#f4d7d7;stroke:#782121;}
+.boxTH {font-weight:500; font-size:14.81666667px;}
+
+.boxR {fill:#f4d7d7; stroke:#782121;stroke-width:0.5;}
+.boxG {fill:#d7f4d7;stroke:#217821;stroke-width:0.5;}
+.boxB {fill:#d7e3f4;stroke:#214478;stroke-width:0.5;}
+
+.boxT {font-weight:500;font-size:7.40833px;}
+.boxT2 {font-weight:500;font-size:5.29167px;}
+.boxT3 {font-weight:500;font-size:6.87917px;}
+
+.box {cursor: url(img/cursors/CursorTip.png),auto;}
+.box:hover .boxR,.box:hover .boxH {fill:#782121;}
+.box:hover .boxG {fill:#217821;}
+.box:hover .boxB {fill:#214478;}
+.box:hover .boxT,.box:hover .boxTH,.box:hover .boxT2,.box:hover .boxT3 {fill:#fff;}
+
+.fcYear {font-size:4.5px; text-anchor:end;}
 /* -_-_-_-_- TOUR -_-_-_-_- */
 
 .tooltip {
@@ -619,7 +648,7 @@ iframe{border:none;}
   border-radius: 6px;
   padding: 5px;
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   margin-left: -60px;
   font-size: 18px;
   font-weight: 500;
