--- a/mapstyle.css
+++ b/mapstyle.css
@@ -68,8 +68,8 @@
 		stroke: #444;
 		stroke-width: 1.5px;
 		opacity: 0.7;
-		stroke-linejoin: round;
-		stroke-linecap: round;
+		stroke-linejoin: square;
+		stroke-linecap: square;
 		stroke-dasharray: none;
 	}
 	.region:hover {stroke-width: 3px; opacity: 1;}
