--- a/mapstyle.css
+++ b/mapstyle.css
@@ -147,7 +147,7 @@
 		transform: scale(3);
 	}
 	
-	.year-button, .reset-button {
+	.reset-button {
 		position: absolute;
 		top: 10px;
 		padding: 6px 12px;
@@ -162,57 +162,57 @@
 	
 	/* == CHECKBOXES == */
 	
-.container {
-  display: block;
-  position: relative;
-  margin-bottom: 2px;
-  padding-left: 25px;
-  padding-top: 2px;
-  cursor: pointer;
-  font-size: 16px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
+	.container {
+		display: block;
+		position: relative;
+		margin-bottom: 2px;
+		padding-left: 25px;
+		padding-top: 2px;
+		cursor: pointer;
+		font-size: 16px;
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+	}
 
-.container input {position: absolute; opacity: 0; cursor: pointer; height: 0; width: 0;}
+	.container input {position: absolute; opacity: 0; cursor: pointer; height: 0; width: 0;}
 
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 16px;
-  width: 16px;
-  background-color: #eee;
-  border: 2px solid #444
-}
+	.checkmark {
+	  position: absolute;
+	  top: 0;
+	  left: 0;
+	  height: 16px;
+	  width: 16px;
+	  background-color: #eee;
+	  border: 2px solid #444
+	}
 
-.container input:checked ~ .riverchk {background-color: #4682B4;}
-.container input:checked ~ .mountainchk {background-color: #9b8e7d;}
-.container input:checked ~ .plateauchk {background-color: #c2b4a3;}
-.container input:checked ~ .desertchk {background-color: #d8ba5f;}
-.container input:checked ~ .steppechk {background-color: #a7c270;}
-.container input:checked ~ .taigachk {background-color: #bdcab4;}
+	.container input:checked ~ .riverchk {background-color: #4682B4;}
+	.container input:checked ~ .mountainchk {background-color: #9b8e7d;}
+	.container input:checked ~ .plateauchk {background-color: #c2b4a3;}
+	.container input:checked ~ .desertchk {background-color: #d8ba5f;}
+	.container input:checked ~ .steppechk {background-color: #a7c270;}
+	.container input:checked ~ .taigachk {background-color: #bdcab4;}
 
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {content: ""; position: absolute; display: none;}
+	/* Create the checkmark/indicator (hidden when not checked) */
+	.checkmark:after {content: ""; position: absolute; display: none;}
 
-/* Show the checkmark when checked */
-.container input:checked ~ .checkmark:after {display: block;}
+	/* Show the checkmark when checked */
+	.container input:checked ~ .checkmark:after {display: block;}
 
-/* Style the checkmark/indicator */
-.container .checkmark:after {
-  left: 5px;
-  top: 0.5px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
+	/* Style the checkmark/indicator */
+	.container .checkmark:after {
+		left: 5px;
+		top: 0.5px;
+		width: 5px;
+		height: 10px;
+		border: solid white;
+		border-width: 0 3px 3px 0;
+		-webkit-transform: rotate(45deg);
+		-ms-transform: rotate(45deg);
+		transform: rotate(45deg);
+	}
 	
 	.reset-button {
 		right: 10px;
@@ -272,40 +272,6 @@
 		z-index: 30;
 	}
 
-/*	
-	#sidebar-tabs {
-	  display: flex;
-	  border-bottom: 1px solid #ccc;
-	  margin-bottom: 10px;
-	}
-
-	.tab-button {
-	  flex: 10%;
-	  padding: 8px;
-	  cursor: pointer;
-	  background: #eee;
-	  border: none;
-	  border-right: 1px solid #ccc;
-	}
-
-	.tab-button:last-child {
-	  border-right: none;
-	}
-
-	.tab-button.active {
-	  background: white;
-	  font-weight: bold;
-	}
-
-	.tab-content {
-	  display: none;
-	}
-
-	.tab-content.active {
-	  display: block;
-	}
-*/
-
 	#toolbox {
 		position: absolute;
 		top: 10px;
@@ -313,9 +279,6 @@
 	}
 	
 	.slider {
-		/*position: absolute;
-		top: 10px;
-		left: 10px;*/
 		width: 300px;
 		height: 10px;
 		background: #e0dbc3;
@@ -368,3 +331,19 @@
 		stroke-width: 3;
 		fill-opacity: 1 !important;
 	}
+	
+@media (max-width: 768px) {
+	#layer-toggles, #search {display: none;}
+
+	#toolbox {
+		position: relative;
+		margin: 10px;
+		top: 0px;
+		left: 0px;
+	}
+
+	#year-slider {width: 100%;}
+	#year-description {max-width: 100%;}
+	
+	.reset-button {top: 80px; font-size: 10px;}
+}
