--- a/timeline-style.css
+++ b/timeline-style.css
@@ -251,6 +251,7 @@ svg:active {
 	pointer-events: none;
 	font-size: 12px;
 	display: none;
+	z-index: 1100;
 }
 
 .sidebar {
@@ -272,7 +273,7 @@ svg:active {
 	margin-top: 10px;
 }
 
-.sidebar button {
+#sidebarClose {
 	position: absolute;
 	top: 8px;
 	right: 10px;
@@ -308,7 +309,16 @@ svg:active {
 .event-type-uncertain {stroke-dasharray: 4 2;}
 
 .event-type-person {rx: 4px;}
+.event-type-red rect {fill: #f4d7d7; stroke: #782121;} .event-type-red:hover rect {fill: #782121;}
+.event-type-red text {fill: #000; font-style: italic;} .event-type-red:hover text {fill: #fff;}
+
+.event-type-green rect {fill: #d7f4d7; stroke: #217821;}
+.event-type-green:hover rect {fill: #217821;}
+.event-type-green text {fill: #000;}
+.event-type-green:hover text {fill: #fff;}
+ 
 .event-type-text text { fill: #3366cc; }
+.event-type-italic {font-style: italic;}
 
 /*Connectors*/
 
@@ -329,13 +339,24 @@ svg:active {
 .connection-type-cultural {stroke-dasharray: 1 1;}
 
 .connection-path {
-  cursor: pointer;
+	cursor: pointer;
+	stroke-linecap: round;
 }
 
 .connection-path:hover {
   stroke: #007acc;
   stroke-width: 2.5;
 }
+
+.event.connected-highlight rect {
+	stroke: #007acc;
+	stroke-width: 2.5;
+}
+.connected-highlight rect {
+	stroke: #007acc;
+	stroke-width: 2.5;
+}
+
 
 .group-event {
   stroke-dasharray: 4 2;
@@ -383,3 +404,41 @@ svg:active {
 	.buttonc {margin-top: 1px;}
 	.buttonc a {font-size: 10px; padding: 6px 8px 5px 5px;}
 }
+
+#modal-overlay {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100vw; height: 100vh;
+  background: rgba(0,0,0,0.85);
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#modal-content {
+  background: #fdfaf4;
+  padding: 20px;
+  position: relative;
+  width: 90%;
+  height: 100%;
+  overflow: hidden;
+}
+
+#modal-close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background: transparent;
+  border: none;
+  color: #000;
+  font-size: 32px;
+  cursor: pointer;
+}
+
+#mini-graph {
+  width: 100%;
+  height: 100%;
+}
+
+.subgraph-btn {color: #960018;}
